# stampo

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/commands/: ring-cli-builder.md
.github/workflows/: ci.yml  rust_build.yml  update-homebrew.yml
Formula/: ring-cli.rb
docs/: getting-started.md  ring-cli-builder-guide.md  setup-guide.md
docs/plans/: 2026-03-05-ux-overhaul-design.md  2026-03-06-banner-design.md
plugin/skills/configuration-builder/: SKILL.md
src/: cache.rs  cli.rs  errors.rs  init.rs  main.rs  models.rs  refresh.rs  style.rs  utils.rs
tests/: integration.rs
tests/fixtures/: invalid_both.yml  invalid_neither.yml  valid_config.yml  valid_http_config.yml
