[package]
name = "ring-cli"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["string"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0.21"
reqwest = { version = "0.13", default-features = false, features = ["gzip", "json", "rustls", "rustls-native-certs"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "6.0"
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
