[package]
name = "ring-cli"
version = "2.2.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["string", "color"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.21"
reqwest = { version = "0.13", default-features = false, features = ["gzip", "json", "rustls", "rustls-native-certs"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "6.0"
thiserror = "2.0"
anyhow = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
