[package]
name = "stampo"
version = "3.0.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["string", "color"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.21"
dirs = "6.0"
thiserror = "2.0"
anyhow = "1.0"
sha2 = "0.10"
openapiv3 = "2"

[dev-dependencies]
tempfile = "3"
